updated movie fields

--- a/app/views/movie/index.html.erb
+++ b/app/views/movie/index.html.erb
@@ -1,4 +1,7 @@
 <% @movies.each do |movie| %>
 <p><%= movie.Name %></p>
 <p><%= movie.Rating %></p>
+<p><%= movie.summary %></p>
+<p><%= movie.released_on %></p>
+
 <% end %>
