showed month in string format

--- a/app/views/movie/index.html.erb
+++ b/app/views/movie/index.html.erb
@@ -2,6 +2,6 @@
 <p><%= movie.Name %></p>
 <p><%= movie.Rating %></p>
 <p><%= movie.summary %></p>
-<p><%= movie.released_on %></p>
+<p><%= movie.released_on.strftime("%d-%B-%Y") %></p>
 
 <% end %>
